# llm-engineering-fundamentals

./: .gitignore  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
01-tokenization/: PROJECT_REPORT.md  README.md  bpe_from_scratch.py  embedding_comparison.py  token_economy.py  visualizer_app.py
01-tokenization/tests/: test_bpe.py
02-positional-embeddings/: PROJECT_REPORT.md  README.md  compare_encodings.py  extrapolation_test.py
02-positional-embeddings/tests/: test_positional.py
03-attention/: PROJECT_REPORT.md  README.md  attention_demo.py
03-attention/tests/: test_attention.py
04-transformers/: README.md  qkv_visualizer.py  stacking_demo.py  transformer_block.py
04-transformers/tests/: test_transformer.py
05-feedforward-activations/: README.md  activation_functions.py  ffn_architectures.py
05-feedforward-activations/tests/: test_ffn.py
06-dropout-regularization/: README.md  dropout_demo.py
06-dropout-regularization/tests/: test_dropout.py
07-embeddings/: README.md  embedding_demo.py
07-embeddings/tests/: test_embeddings.py
08-decoding-strategies/: README.md  decoding_demo.py
08-decoding-strategies/tests/: test_decoding.py
09-sampling/: README.md  sampling_demo.py
09-sampling/tests/: test_sampling.py
10-mini-transformer/: README.md  mini_transformer_demo.py
llm_engineering_fundamentals/: __init__.py
llm_engineering_fundamentals.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
shared/: __init__.py  plotting.py
(+23 files in other folders)
